--- a/contacts.html
+++ b/contacts.html
@@ -129,7 +129,6 @@
               id="exampleFormControlTextarea1"
               rows="4"
               placeholder="Your Message"
-
             ></textarea>
           </div>
           <button type="submit" class="btn m-auto">Send Massage</button>
@@ -298,5 +297,6 @@
         }, 3000);
       }
     </script>
+    <script src="/js/validation.js"></script>
   </body>
 </html>
